crates/nidus/tests/ui/route_missing_path.stderr
error: #[get] requires a string literal path like #[get("/:id")]
 --> tests/ui/route_missing_path.rs:8:5
  |
8 |     #[get]
  |     ^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
